
UTILS:
service-merger: extend location=any - especially for Panorama DG to merge all DG objects with one single script run - also possible with argument allowmergingwithupperlevel
service-merger: change default DupAlgorithm from sameport (which focus only on Dst port) to sameDstSrcport

BUGFIX:
- fix for pa_rule-edit 'filter=(rule is.unused.fast)' for PAN-OS version detection if connection is going through Panorama
- fix for pa_rule-merge if NEGATION of original Rule and RuleToCompare differ
- fix for different classes are made
- fix class-NatRule | rewriteSNAT_XML() fix rewrite of IP-Address now value() is used
- fix service-merger | fix  algorithm=SameDstSrcPorts for single FW vsys
- fix address-/service-merger | fix location=any - add also shared

------------------------------------------------------------------------------------------------------------------------

1.5.15 (20180611)
* introduce release 1.5.15
* update predefined.xml to 8041-4843
* introduce class-VirtualWire
* introduce class-TemplateStack
* update predefined.xml to 8043-4857
* class-EthernetInterface/-EthernetIfStore - extend with new Interface types
* class-VirtualWire/-VirtualWireStore - extend with new methodes - setName/setInterface - newVirtualWire / addVirtualWire
* class-Zone/ZoneStore - extend with virtual-wire
* class-VirtualWire/VirtualWireStore - extend validation
* class-InterfaceContainer - extend validation for addInterface - improve API_addInterface
* class-EthernetInterface/EthernetIfStore - extend with ae information - extend validation
* class-Zone - reduce warning if not yet supported in pan-c framework
* class-Zone - extend with type: tap, layer2, tunnel
* update predefined.xml to 8070-5032
* class-Address - introduce address object of type ip-wildcard
* class-AppStore/App - introduce App secure ports
* class-IKEGateway - extend to cover IKEv2