@@ -183,8 +183,10 @@ if( !$apiMode )
 $location_array = array();
 if( $location == 'any' || $location == 'all' )
 {
-    //Todo: what about all vsys??????
-    $alldevicegroup = $panc->deviceGroups;
+    if( $panc->isPanorama() )
+        $alldevicegroup = $panc->deviceGroups;
+    else
+        $alldevicegroup = $panc->virtualSystems;
 
     foreach( $alldevicegroup as $key => $tmp_location )
     {
@@ -204,14 +206,14 @@ if( $location == 'any' || $location == 'all' )
             $childDeviceGroups = $findLocation->childDeviceGroups(true);
             $location_array[$key]['childDeviceGroups'] = $childDeviceGroups;
         }
+        else
+            $location_array[$key]['childDeviceGroups'] = null;
+
     }
     $location_array[$key+1]['findLocation'] = 'shared';
     $location_array[$key+1]['store'] = $panc->serviceStore;
     $location_array[$key+1]['parentStore'] = null;
-    if( $panc->isPanorama() )
-    {
-        $location_array[$key+1]['childDeviceGroups'] = $alldevicegroup;
-    }
+    $location_array[$key+1]['childDeviceGroups'] = $alldevicegroup;
 
 }
 else
