@@ -14,6 +14,7 @@ GENERAL:
 UTILS:
 service-merger: extend location=any - especially for Panorama DG to merge all DG objects with one single script run - also possible with argument allowmergingwithupperlevel
 service-merger: change default DupAlgorithm from sameport (which focus only on Dst port) to sameDstSrcport
+address-/service-merger:  extend location=any to run successful against firewall with vsys/multi-vsys
 
 BUGFIX:
 - fix for pa_rule-edit 'filter=(rule is.unused.fast)' for PAN-OS version detection if connection is going through Panorama
